added checking for needed tools before starting up. should prevent scenarios where execution in cron-environments fails silently

--- a/README
+++ b/README
@@ -6,10 +6,11 @@ Requirements:
 *) Perl 5.8 or later
 *) Linux::LVM
 *) Sys::Filesystem
+*) File::Which
 
 On Debian/Lenny:
 
-apt-get install liblinux-lvm-perl dh-make-perl
-dh-make-perl --build --install --CPAN Sys::Filesystem
+apt-get install liblinux-lvm-perl libfile-which-perl dh-make-perl
+dh-make-perl --install --CPAN Sys::Filesystem
 
 ./snapshotter --help
